--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-# Project exclude paths
-/out/
+# Created by .ignore support plugin (hsz.mobi)
+### Java template
+# Compiled class file
+*.class
+
+
+# Log file
+*.log
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+
+hs_err_pid*
+*.target
+/.idea/
+*.iml
